--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <meta property="og:description" content="Pikachu made only with CSS3 - no images" />
     <meta property="og:title" content="Pikachu CSS3 | Raphael Fabeni" />
     <meta property="og:site_name" content="Raphael Fabeni" />
-    <meta property="og:url" content="http://www.raphaelfabeni.com.br/pikachu-css3" />
+    <meta property="og:url" content="http://www.raphaelfabeni.com.br/pikachu-css3/" />
 	<title>Pikachu CSS3</title>
 	<link rel="stylesheet" href="pikachu.css">
 </head>
