--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 						<div class="nose-bottom"></div>
 					</div>					
 				</div>
-				<div id="open" class="mouth-open active">
+				<div id="open" class="mouth-open">
 					<div class="tongue"></div>
 				</div>
 				<div class="hold-mouth">
